--- a/app/static/css/admin_employee.css
+++ b/app/static/css/admin_employee.css
@@ -1,3 +1,13 @@
+:root{
+/* https://googlechrome.github.io/samples/css-custom-properties/ */
+/*************************** Page-wide variables ****************************/
+    --min-button-height: 60px;
+    --form-header-height: 60px;
+}
+ /***************************** Calculated values ****************************/
+  /* We don't use calc here because we don't want to resolve the values yet.
+     You can think of these as simple textual replacements. */
+
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -19,7 +29,12 @@
     padding: 20px;
     border: 1px solid #888;
     width: 500px; /* Could be more or less, depending on screen size */
-    max-height: 90%;
+    max-height: 600px;
+    
+}
+
+.form {
+    max-height: 95vh;
 }
 
 /* The Close Button */
@@ -38,7 +53,8 @@
 }
 
 .modal-content .active {
-    display: inline;
+    display: block;
+    max-height: 100vh;
 }
 
 .modal-content .inactive {
@@ -50,8 +66,10 @@
 }
 
 .form {
+    height: 100%;
+    max-height: 90vh;
     padding-top: 40px;
-    padding-bottom: 60px;
+    padding-bottom: 40px;
     max-width:400px;
     width: 100%;
     margin:40px auto;
@@ -69,6 +87,10 @@
     margin-bottom: 30px;
 }
 
+.form-content-header {
+    height:var(--form-header-height);
+}
+
 .form-content-container {
     border: medium none !important;
     margin: 0 0 10px;
@@ -76,8 +98,10 @@
     padding-right: 10px;
     width: 100%;
     overflow-y: scroll;
-    height: 100%;
-    max-height: 100%;
+    /* How to take up the remaining space with overflow */
+    display: block;
+    position: relative;
+    height:calc(100% - var(--form-header-height) - var(--min-button-height) );
 }
 
 .form-content-container input[type="text"],
@@ -126,7 +150,7 @@
 
 .form button {
     width: 100%;
-    height: 60px;
+    height: var(--min-button-height);
     padding: 10px 10px;
     background: #337ab7;
     font-size: 1em;
@@ -139,7 +163,7 @@
     bottom: 0;
     max-height: 60px;
     border: 0px solid rgba(0,0,0,0.1);
-  border-radius: 0 0 2px 2px;
+    border-radius: 0 0 2px 2px;
     transform: rotateZ(0deg);
     
     transition: all 0.1s ease-out;
