Initialised table load

--- a/app/templates/admin_employee.html
+++ b/app/templates/admin_employee.html
@@ -21,7 +21,7 @@
 
             <div class="form-content-header">
  
-                <h3>Add a new employee</h3>
+                <h3 id="form_heading">Add a new employee</h3>
             </div>
 
                 <div class="form-content-container">
@@ -157,7 +157,7 @@
 
     <!-- Table of employees -->
 
-        <div id="employee_table_container"></div>
+        <table id="employee_table_container"></table>
 
 
     <!-- table of employee skills -->
