--- a/app/static/css/admin_employee.css
+++ b/app/static/css/admin_employee.css
@@ -113,7 +113,7 @@
 .form-content-container textarea {
   max-height: 200px;
   width: 100%;
-  height: 100%;
+  height: 40px;
   border: 1px solid #ccc;
   background: #FFF;
   margin: 0 0 5px;
@@ -122,7 +122,8 @@
 
 .form-content-container select[multiple]{
     max-height:100%;
-    height: 100%;
+    height: 40px;
+    height: 100px;
 }
 
 .form-content-container input[type="date"]{ 
@@ -140,6 +141,26 @@
     width:100%;
     max-width: 100%;
 }
+
+.form-row-input .row-header {
+ 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width:45%;
+    border-top:1px solid #ccc;
+    border-left:1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding-left: 5px;
+    height: 40px;
+
+}
+
+.row-header.skills {
+    height: 100px !important;
+}
+
 
 .form-row-input > .half {
     max-width: 50%;
