removed ancilliary buttons

--- a/app/templates/admin_employee.html
+++ b/app/templates/admin_employee.html
@@ -6,11 +6,8 @@
 
 <h3>Table of employee data</h3>
 
-<button id="add-employee-btn">add</button>
-
 <div id="employee_tb_container">
     
-    <button id="delete-close-btn-open">delete selection</button>
     <!-- delete selection modal -->
 
     <div id="employee_tb-delete_container_modal" class="modal">
@@ -74,8 +71,8 @@
 
                             <select id="gener_input">
                                 <option value="">Gender</option>
-                                <option value="male">Male</option>
-                                <option value="female">Female</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
                             </select>
                         </div>
                     </div>
