--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -37,7 +37,11 @@
                     <div class="ui secondary vertical fluid menu">
                       <a class="active item">Overview</a><a class="item">Reports</a><a class="item">Analytics</a><a class="item">Export</a>
                       <div class="ui hidden divider"></div>
-                      <a class="item">Nav item</a><a class="item">Nav item again</a><a class="item">One more nav</a><a class="item">Another nav item</a><a class="item">More navigation</a>
+                      <a href="/admin_employee/" class="item">Admin Employee</a>
+                      <a href="/test_shift/" class="item">Shiftn</a>
+                      <a class="item">One more nav</a>
+                      <a class="item">Another nav item</a>
+                      <a class="item">More navigation</a>
                       <div class="ui hidden divider"></div>
                       <a class="item">Macintosh</a><a class="item">Linux</a><a class="item">Windows</a>
                     </div>
